# dax-query-mcp

./: .gitignore  README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/: copilot-guard.json  copilot-instructions.md
.github/extensions/dax-query-pack/: extension.mjs
.github/workflows/: ci.yml  publish-pypi.yml
Connections/: ahr_connection.md  ahr_connection.yaml  mock_contoso.data_dictionary.yaml  mock_contoso.md  mock_contoso.yaml  mock_contoso_overview.md  sample_connection.md  sample_connection.yaml
dax_query_mcp/: __init__.py  cli.py  config.py  connections.py  copilot_guard.py  data_dictionary.py  errors.py  exceptions.py  executor.py  followups.py  formatting.py  mcp_server.py  mock_cube.py  models.py  pipeline.py  profiling.py  query_builder.py  query_pack.py  query_pack_cli.py  query_pack_export.py  scaffold.py  validated_query_library.py
docs/: ROADMAP.md  dax-mcp-skill-and-extension-guide.md
queries/: sample_query.yaml
scripts/: check_generic_artifacts.py  install-git-hooks.ps1  prepare_release_version.py
tests/: test_ai_integration.py  test_builder_config.py  test_cli.py  test_config.py  test_connections.py  test_copilot_guard.py  test_data_dictionary.py  test_errors.py  test_executor.py  test_executor_regression.py  test_generic_artifacts.py  test_guardrails.py  test_mcp_server.py  test_mock_cube.py  test_pipeline.py  test_prepare_release_version.py  test_profiling.py  test_query_builder.py  test_query_builder_cli.py  test_query_pack.py  test_query_pack_cli.py  test_scaffold.py  test_validated_query_library.py
