[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dax-query-mcp"
version = "0.2.0"
description = "Windows-first DAX and MCP toolkit for Power BI semantic models"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Wes Stone"}]
keywords = ["dax", "power-bi", "mcp", "analysis-services", "semantic-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.0",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "pyperclip>=1.9.0",
    "pywin32>=310; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/wes-stone/dax-query-mcp"
Repository = "https://github.com/wes-stone/dax-query-mcp"
Issues = "https://github.com/wes-stone/dax-query-mcp/issues"

[project.scripts]
dax-query = "dax_query_mcp.cli:main"
dax-query-builder = "dax_query_mcp.cli:main"
dax-query-server = "dax_query_mcp.mcp_server:main"
dax-query-guard = "dax_query_mcp.copilot_guard:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ai_integration: AI-in-the-loop tests using Copilot SDK (require Copilot CLI running)",
]

[tool.setuptools.packages.find]
include = ["dax_query_mcp*"]

